=== HEAD

* Add string_agg extension for aggregate string concatenation support on many databases (jeremyevans)

* Add SQL::Function#order for ordered aggregate functions (jeremyevans)

* Support operator validation in constraint_validations for <, <=, >, and >= operators with string and integer arguments (jeremyevans)

* Make validates_operator validation consider nil values invalid unless :allow_nil or similar option is used (jeremyevans)

* Close cursors for non-SELECT queries in the oracle adapter after execution, instead of waiting until GC (jeremyevans) (#1203)

* Add :class_namespace association option for setting default namespace for :class option given as symbol/string (jeremyevans)

* Add Sequel::Model.cache_anonymous_models accessor for changing caching on a per-model basis (jeremyevans)

* Add Sequel::Model.def_Model for adding a Model() method to a module, for easier use of namespaced models (jeremyevans)

* Add Sequel::Model::Model() for creating subclasses of Sequel::Model subclasses, instead of just Sequel::Model itself (jeremyevans)

=== 4.35.0 (2016-06-01)

* Add :headline option to PostgreSQL Dataset#full_text_search for adding an extract of the matched text to the SELECT list (jeremyevans)

* Make :rollback=>:always inside a transaction use a savepoint automatically if supported (jeremyevans) (#1193)

* Recognize bool type as boolean in the schema dumper (jeremyevans) (#1192)

* Make Dataset#to_hash and #to_hash_groups work correctly for model datasets doing eager loading (jeremyevans)

* Make delay_add_association plugin handle hashes and primary keys passed to add_* association methods (jeremyevans) (#1187)

* Treat :Bignum as a generic type, to support 64-bit integers on ruby 2.4+, where Bignum == Integer (jeremyevans)

* Add server_logging extension for including server/shard information when logging queries (jeremyevans)

* Add Database#log_connection_info, for including connection information when logging queries (jeremyevans)
